--- a/projects/templates/projects/detail.html
+++ b/projects/templates/projects/detail.html
@@ -18,6 +18,11 @@
         </div>
     </div>
     <!-- /.row -->
+    <ol class="breadcrumb">
+        <li><a href="{% url 'root' %}">Home</a></li>
+        <li><a href="{% url 'projects:index' %}">Projects</a></li>
+        <li class="active">Detail</li>
+    </ol>
 
 
 <ul class="nav nav-tabs responsive" id="myTab">
