--- a/projects/templates/projects/index.html
+++ b/projects/templates/projects/index.html
@@ -19,7 +19,7 @@
     </div>
     <!-- /.row -->
     <ol class="breadcrumb">
-        <li><a href="index.html">Home</a></li>
+        <li><a href="{% url 'root' %}">Home</a></li>
         <li class="active">Projects</li>
     </ol>
 
@@ -72,6 +72,8 @@
       </a>
     </li>
   </ul>
+  </div>
+  </div>
 </nav>
 <hr>
 
