--- a/projects/templates/projects/detail.html
+++ b/projects/templates/projects/detail.html
@@ -38,7 +38,7 @@
         <h3 class="panel-title">Description</h3>
       </div>
       <div class="panel-body">
-        {{ project.description }}
+        {{ project.description|safe }}
       </div>
     </div>
 
@@ -47,7 +47,7 @@
         <h3 class="panel-title">Details</h3>
       </div>
       <div class="panel-body">
-        {{ project.details }}
+        {{ project.details|safe }}
       </div>
     </div>
 
