--- a/projects/templates/projects/edit.html
+++ b/projects/templates/projects/edit.html
@@ -29,7 +29,7 @@
 
 <hr>
 
-    <form enctype="multipart/form-data" action="{% url 'projects:edit' 3 %}" method="post">
+    <form enctype="multipart/form-data" action="{{ request.path }}" method="post">
     {% csrf_token %}
     {{ form }}
     <input type="submit" value="Submit" />
