--- a/projects/templates/projects/detail.html
+++ b/projects/templates/projects/detail.html
@@ -27,7 +27,9 @@
 
 <ul class="nav nav-tabs responsive" id="myTab">
   <li class="active"><a href="#home">Information</a></li>
-  <li><a href="#instructions">Instructions</a></li>
+  <li><a href="#instructions">
+      Instructions <span class="badge">{{  project.buildsteep_set.count }}</span>
+  </a></li>
 </ul>
 
 <div class="tab-content responsive">
@@ -60,10 +62,22 @@
   </div>
   <div class="tab-pane" id="instructions">
 
+    <div class="no-auto-collapse">
+      <a type="button" class="btn btn-default" aria-label="Left Align" href="{% url 'projects:addSteep' project.pk %}">
+        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+      </a>
+    </div>
+
       <!-- List group -->
       <ul class="list-group">
-          {% for steep in project.buildsteep_set.all %}
-        <li class="list-group-item">{{ steep.content|safe }}</li>
+        {% for steep in project.buildsteep_set.all %}
+        <li class="list-group-item">
+          <div class="no-collapse">
+            <a type="button" class="btn btn-default" aria-label="Left Align" href="{% url 'projects:editSteep' project.pk steep.pk %}">
+              <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+            </a>
+          </div>
+            {{ steep.content|safe }}</li>
           {% endfor %}
       </ul>
     </div>
