--- a/projects/templates/projects/editProject.html
+++ b/projects/templates/projects/editProject.html
@@ -31,7 +31,15 @@
 
     <form enctype="multipart/form-data" action="{{ request.path }}" method="post">
     {% csrf_token %}
-    {{ form }}
+    {% for field in form %}
+    <div class="fieldWrapper">
+      {% if field.errors %}
+        <div class="alert alert-warning" role="alert">{{ field.errors }}</div>
+      {% endif %}
+        <h4>{{ field.label_tag }}</h4>
+        {{ field }}
+    </div>
+{% endfor %}
     <input type="submit" value="Submit" />
 </form>
 
