--- a/projects/templates/projects/editSteep.html
+++ b/projects/templates/projects/editSteep.html
@@ -17,7 +17,7 @@
     <div class="row">
         <div class="col-lg-12">
             <h1 class="page-header">Create
-                <small>Project</small>
+                <small>Steep</small>
             </h1>
         </div>
     </div>
@@ -31,7 +31,13 @@
 
     <form enctype="multipart/form-data" action="{{ request.path }}" method="post">
     {% csrf_token %}
-    {{ form }}
+    <div class="fieldWrapper">
+        <label for="{{ form.content.id_for_label }}">Steep explanation</label>
+        {% if form.content.errors %}
+            <div class="alert alert-warning" role="alert">{{ form.content.errors }}</div>
+        {% endif %}
+          {{ form.content }}
+    </div>
     <input type="submit" value="Submit" />
 </form>
 
