--- a/projects/templates/projects/projectView.html
+++ b/projects/templates/projects/projectView.html
@@ -85,17 +85,21 @@
       </a>
     </div>
 
-    <ul class="list-group">
     {% for steep in project.buildsteep_set.all %}
-    <li class="list-group-item">
+      <div class="panel panel-default">
+      <div class="panel-heading"><h3 class="panel-title">
+          {% if steep.name %} {{ steep.name }}
+          {% else %} Steep {{ forloop.counter }} {% endif %}
+          </h3></div>
+      <div class="panel-body">
       <div class="no-collapse">
         <a type="button" class="btn btn-default" aria-label="Left Align"
            href="{% url 'projects:editSteep' project.pk steep.pk %}">
           <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
         </a>
       </div>
+      {{ steep.content|safe }}
       {% if steep.resource_set.all %}
-
         <div class="row">
           {% for image in steep.resource_set.all %}
             {% if image.type == 'IMG' and image.file_url %}
@@ -108,12 +112,12 @@
           {% endfor %}
           </div>
         {% endif %}
-      {{ steep.content|safe }}
-    </li>
+      </div>
+      </div>
     {% empty %}
         <div class="alert alert-info" role="alert"><p>No instructions. To add one click the "+" button above.</p></div>
     {% endfor %}
-    </ul>
+
 
     <div class="modal fade" id="imagemodal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
       <div class="modal-dialog">
@@ -135,9 +139,10 @@
       </a>
     </div>
 
-    <ul class="list-group">
     {% for blogEntry in project.blogentry_set.all %}
-    <li class="list-group-item">
+    <div class="panel panel-default">
+    <div class="panel-heading"><h3 class="panel-title">{{ blogEntry.title }}</h3></div>
+    <div class="panel-body">
       <div class="no-collapse">
         <a type="button" class="btn btn-default" aria-label="Left Align"
            href="#">
@@ -145,11 +150,12 @@
         </a>
       </div>
       {{ blogEntry.content|safe }}
-    </li>
+    </div>
+    </div>
     {% empty %}
         <div class="alert alert-info" role="alert"><p>No blog posts. To add one click the "+" button above.</p></div>
     {% endfor %}
-    </ul>
+
 
 {% endif %}
 
