--- a/projects/static/css/base.css
+++ b/projects/static/css/base.css
@@ -22,6 +22,12 @@ a.btn-default {
     float: right;
 }
 
+/* Edit button on heading */
+div.panel-heading > a.btn-default {
+    padding: 4px 10px;
+    margin-top: -23px;
+}
+
 .navbar-brand > img {
     height: 38px;
     margin-top: -9px;
