--- a/projects/templates/projects/index.html
+++ b/projects/templates/projects/index.html
@@ -57,7 +57,7 @@
   <div class="row text-center">
   <div class="col-lg-12">
   <ul class="pagination pagination-lg">
-    <li {% if not projects.has_previous %} class="disabled" {% endif %}>
+    <li {% if not has_previous %} class="disabled" {% endif %}>
       <a href="{% if projects.has_previous %}{% url 'projects:indexI' projects.previous_page_number %}
                {% else %}#{% endif %}" aria-label="Previous">
         <span aria-hidden="true">&laquo;</span>
