--- a/projects/templates/projects/projectView.html
+++ b/projects/templates/projects/projectView.html
@@ -132,7 +132,7 @@
 
 {% elif tab == 'blog' %}
 
-    <div class="no-auto-collapse">
+        <div class="no-auto-collapse">
       <a type="button" class="btn btn-default space-arround" aria-label="Left Align"
          href="{% url 'projects:addSteep' project.pk %}">
         <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
@@ -141,14 +141,11 @@
 
     {% for blogEntry in project.blogentry_set.all %}
     <div class="panel panel-default">
-    <div class="panel-heading"><h3 class="panel-title">{{ blogEntry.title }}</h3></div>
-    <div class="panel-body">
-      <div class="no-collapse">
-        <a type="button" class="btn btn-default" aria-label="Left Align"
-           href="#">
+    <div class="panel-heading"><h3 class="panel-title">{{ blogEntry.title }}</h3> <a type="button" class="btn btn-default"
+           href="{% url 'projects:editBlog' project.pk blogEntry.pk %}">
           <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-        </a>
-      </div>
+        </a></div>
+    <div class="panel-body">
       {{ blogEntry.content|safe }}
     </div>
     </div>
