--- a/projects/static/css/base.css
+++ b/projects/static/css/base.css
@@ -25,7 +25,7 @@ a.btn-default {
 /* Edit button on heading */
 div.panel-heading > a.btn-default {
     padding: 4px 10px;
-    margin-top: -23px;
+    margin-top: -5px;
 }
 
 .navbar-brand > img {
@@ -33,6 +33,9 @@ div.panel-heading > a.btn-default {
     margin-top: -9px;
 }
 
+.panel-heading > h3 {
+    display: inline;
+}
 
 .tab-pane {
     padding-top: 20px;
