--- a/projects/templates/projects/projectView.html
+++ b/projects/templates/projects/projectView.html
@@ -134,21 +134,25 @@
 
         <div class="no-auto-collapse">
       <a type="button" class="btn btn-default space-arround" aria-label="Left Align"
-         href="{% url 'projects:addSteep' project.pk %}">
+         href="{% url 'projects:addBlog' project.pk %}">
         <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
       </a>
     </div>
 
-    {% for blogEntry in project.blogentry_set.all %}
-    <div class="panel panel-default">
-    <div class="panel-heading"><h3 class="panel-title">{{ blogEntry.title }}</h3> <a type="button" class="btn btn-default"
-           href="{% url 'projects:editBlog' project.pk blogEntry.pk %}">
-          <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-        </a></div>
-    <div class="panel-body">
-      {{ blogEntry.content|safe }}
-    </div>
-    </div>
+    {% for blogEntry in project.blogentry_set.all|dictsortreversed:"pub_date"  %}
+      {% if blogEntry.is_after_publish_date %}
+        <div class="panel panel-default">
+        <div class="panel-heading">
+            <h3 class="panel-title">{{ blogEntry.title }}</h3> - {{ blogEntry.pub_date|date }} {{ blogEntry.pub_date|date:'G:i' }}
+            <a type="button" class="btn btn-default"
+               href="{% url 'projects:editBlog' project.pk blogEntry.pk %}">
+              <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+            </a></div>
+        <div class="panel-body">
+          {{ blogEntry.content|safe }}
+        </div>
+        </div>
+      {% endif %}
     {% empty %}
         <div class="alert alert-info" role="alert"><p>No blog posts. To add one click the "+" button above.</p></div>
     {% endfor %}
