--- a/projects/templates/projects/editBlog.html
+++ b/projects/templates/projects/editBlog.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block title %}
-    {{ "Projects" }} | {{ block.super }}
+    {{ "Create blog entry" }} | {{ block.super }}
 {% endblock title %}
 
 {% block content %}
@@ -17,13 +17,15 @@
     <div class="row">
         <div class="col-lg-12">
             <h1 class="page-header">Create
-                <small>Steep</small>
+                <small>Blog entry</small>
             </h1>
         </div>
     </div>
     <!-- /.row -->
     <ol class="breadcrumb">
         <li><a href="{% url 'root' %}">Home</a></li>
+        <li><a href="{% url 'projects:index' %}">Projects</a></li>
+        <li><a href="{% url 'projects:blog' project.pk %}">{{ project.title }}</a></li>
         <li class="active">Create</li>
     </ol>
 
@@ -53,16 +55,34 @@
         {% if form.clear.errors %}
             <div class="alert alert-warning" role="alert">{{ form.image.errors }}</div>
         {% endif %}
-         {% if e.image %}
-          <img class="col-sm-6 img-responsive image-resource thumbnail img-fluid" height="200px" src="{{ e.image.url }}" alt="">
+         {% if entry.image %}
+          <img class="col-sm-6 img-responsive image-resource thumbnail img-fluid" height="200px" src="{{ entry.image.url }}" alt="">
         {% endif %}
-        <div class="{{ image|yesno:"col-md-6,col-md-12" }}">
+        <div class="{{ entry.image|yesno:"col-md-6,col-md-12" }}">
           {{ form.image }}
           {{ form.clear }} <p>Clear</p>
         </div>
     </div>
-    <input type="submit" value="Save" class="btn btn-default btn-lg submit" />
-</form>
+    <div class="fieldWrapper">
+        <h3>{{ form.pub_date.label_tag }}</h3>
+        {% if form.pub_date.errors %}
+            <div class="alert alert-warning" role="alert">{{ form.pub_date.errors }}</div>
+        {% endif %}
+          {{ form.pub_date }}
+    </div>
+
+
+    <input type="submit" value="Save" class="btn btn-primary btn-lg submit" />
+    </form>
+
+    {% if entry %}
+    <form action="{% url 'projects:deleteBlog' project.pk entry.pk %}" method="POST"
+        onsubmit="return confirm('This action connot be undone. Proceed?');">
+    {% csrf_token %}
+    <button type="submit" class="btn btn-danger btn-lg submit">Delete</button>
+    </form>
+    {% endif %}
+
 
 <hr>
 
