--- a/projects/templates/projects/editSteep.html
+++ b/projects/templates/projects/editSteep.html
@@ -16,7 +16,7 @@
     <!-- Page Heading/Breadcrumbs -->
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">Create
+            <h1 class="page-header">{{ steep|yesno:"Edit,Create" }}
                 <small>Steep</small>
             </h1>
         </div>
